@@ -32,12 +32,16 @@
 
 /* corps */
 .main-content h1{font-size:150%; font-weight:bold; margin-top:2.5em;}
+.main-content h1.titre{font-size:210%; margin-top:1.5em;}
 .main-content p{text-align:justify;}
 .main-content ul li li, .main-content ol li {font-size:100%;}
 .main-content ul li strong, .main-content ol li strong {border-bottom:1px solid [(#ENV{mfx_c200})];}
 
-/* sous-titres {{{ }}} */
+/* intertitres {{{ }}} */
 .main-content h3{font-size:160%; margin:1em 0 0.2em 0;}
+/* sur et sous titres */
+.main-content h3.surtitre{font-size:160%;margin:1.0em 0 -2em 0;}
+.main-content h3.soustitre{font-size:160%;margin:-0.9em 0 0.5em 0;}
 
 /* colonne un-tiers, deux-tiers */
 .column2-one-third-left, .column2-two-third-left {float:left; margin-bottom:10px !important /*Non-IE6*/; margin-bottom:5px /*IE6*/;}
