@@ -10,7 +10,6 @@
 	- mfx_balise_titre : 			balise pour afficher le titre {h1*|h2}
 ]
 
-[(#SET{balise_titre,  [(#ENV{mfx_balise_titre}|sinon{h1})]})]
 [(#SET{logo_taille,  [(#ENV{mfx_logo_taille}|sinon{100})]})]
 [(#SET{logo_align,  [(#ENV{mfx_logo_align}|sinon{right})]})]
 
@@ -19,15 +18,13 @@
 <BOUCLE_contenu_article(ARTICLES){id_article}>
 	  
 	  [(#ENV{mfx_afficher_surtitre}|=={'non'}|?{'',' '})
-	    [<h3[ class="(#EDIT{surtitre})"]>(#SURTITRE)</h3>]
+	    [<h3 class="[(#EDIT{surtitre}) ]surtitre">(#SURTITRE)</h3>]
 	  ]
 	  
-	  <#GET{balise_titre}[ class="(#EDIT{titre})"]>
-          #TITRE
-	  </#GET{balise_titre}>
+	  <h1 class="[(#EDIT{titre}) ]titre">#TITRE</h1>
 	  
 	  [(#ENV{mfx_afficher_soustitre}|=={'non'}|?{'',' '})
-	    [<h3[ class="(#EDIT{soustitre})"]>(#SOUSTITRE)</h3>]
+	    [<h3 class="[(#EDIT{soustitre})] soustitre">(#SOUSTITRE)</h3>]
 	  ]
 	  
 	  [(#ENV{mfx_afficher_details}|=={'non'}|?{'',' '})
