@@ -17,7 +17,6 @@
 ]
 
 [(#SET{doublons, [(#ENV{mfx_doublons}|sinon{#DOUBLON_ALEA})]})]
-[(#SET{balise_titre,  [(#ENV{mfx_balise_titre}|sinon{h1})]})]
 [(#SET{logo_taille,  [(#ENV{mfx_logo_taille}|sinon{100})]})]
 [(#SET{logo_align,  [(#ENV{mfx_logo_align}|sinon{right})]})]
 
@@ -30,19 +29,19 @@
 <BOUCLE_intro_articles(ARTICLES){id_rubrique?}{par date}{inverse}{pagination #ENV{mfx_pagination_nombre}|sinon{3}}{doublons #GET{doublons}}>
 	  
 	  [(#ENV{mfx_afficher_surtitre}|=={'non'}|?{'',' '})
-	    [<h3[ class="(#EDIT{surtitre})"]>(#SURTITRE)</h3>]
+	    [<h3 class="[(#EDIT{surtitre}) ]surtitre">(#SURTITRE)</h3>]
 	  ]
 	  
-	  <#GET{balise_titre}[ class="(#EDIT{titre})"]>
+	  <h1 class="[(#EDIT{titre}) ]titre">
 	    [(#ENV{mfx_lien_sur_titre}|=={'non'}|?{  
           #TITRE
           ,
           <a href="#URL_ARTICLE">#TITRE</a>
         })]
-	  </#GET{balise_titre}>
+	  </h1>
 	  
 	  [(#ENV{mfx_afficher_soustitre}|=={'non'}|?{'',' '})
-	    [<h3[ class="(#EDIT{soustitre})"]>(#SOUSTITRE)</h3>]
+	   [<h3 class="[(#EDIT{soustitre})] soustitre">(#SOUSTITRE)</h3>]
 	  ]
 	  
 	  [(#ENV{mfx_afficher_details}|=={'non'}|?{'',' '})
