@@ -22,10 +22,10 @@
 	<div class="column1-unit">
 	
 	  [(#ENV{mfx_afficher_surtitre}|=={'non'}|?{'',' '})
-	    [<h3[ class="(#EDIT{surtitre})"]>(#SURTITRE)</h3>]
+	    [<h3 class="[(#EDIT{surtitre}) ]surtitre">(#SURTITRE)</h3>]
 	  ]
 	  
-	  <h1[ class="(#EDIT{titre})"]>
+	  <h1 class="[(#EDIT{titre}) ]titre">
 	    [(#ENV{mfx_lien_sur_titre}|=={'non'}|?{  
           #TITRE
           ,
@@ -34,7 +34,7 @@
 	  </h1>
 	  
 	  [(#ENV{mfx_afficher_soustitre}|=={'non'}|?{'',' '})
-	    [<h3[ class="(#EDIT{soustitre})"]>(#SOUSTITRE)</h3>]
+	    [<h3 class="[(#EDIT{soustitre})] soustitre">(#SOUSTITRE)</h3>]
 	  ]
 	  
 	  
