@@ -57,13 +57,8 @@ include_spip('public/balises');
 // Le filtre [(#ID_RUBRIQUE|titre_parent)]
 if (!function_exists('calcul_titre_parent')){
 	function calcul_titre_parent($id_rubrique) {
-		$fetch = function_exists('sql_fetch') ? 'sql_fetch' : 'spip_fetch_array';
 		if(!($id_rubrique = intval($id_rubrique))) return '';
-		$q = 'SELECT titre FROM spip_rubriques WHERE id_rubrique='.$id_rubrique;
-		if($r = spip_query($q))
-			if($row = $fetch($r))
-				return $row['titre'];
-		return '';
+		return sql_getfetsel('titre','spip_rubriques','id_rubrique='.$id_rubrique);
 	}
 }
 
