@@ -1,7 +1,0 @@
-
-<ul>
-<BOUCLE_syndic(SYNDIC_ARTICLES){id_rubrique}{0,10}>
- <li>#TITRE</li>
-</BOUCLE_syndic>
-</ul>
-
