@@ -1,3 +1,6 @@
+
+- correction des espacements titre, sur/soustitre et intertitres
+
 V0.2.6 (30 07 2008)
 - feu de joie avec les drapeaux, remplacés par les codes de langue iso
 
